--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait">
+        android:theme="@style/AppTheme"
+        android:configChanges="orientation"
+        android:screenOrientation="portrait">>
+        <activity android:name=".HomeScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity">
+            <!--android:configChanges="orientation"-->
+            <!--android:screenOrientation="portrait">-->
+        </activity>
+        <activity android:name=".RulesActivity"/>
     </application>
 
 </manifest>
