--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             <!--android:configChanges="orientation"-->
             <!--android:screenOrientation="portrait">-->
         </activity>
+        <activity android:name=".PlayersActivity" />
         <activity android:name=".RulesActivity"/>
     </application>
 
